# xwayland-satellite

./: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  flake.nix  xwayland-satellite.man
.github/: FUNDING.yml  config.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: ci.yml  set-vars.sh  should-rebuild.sh  ubuntu.dockerfile
macros/: Cargo.toml
macros/src/: lib.rs
resources/: xwayland-satellite.service
satellite/: Cargo.toml
satellite/src/: clientside.rs  lib.rs  main.rs  xstate.rs
satellite/src/server/: dispatch.rs  event.rs  mod.rs  tests.rs
satellite/tests/: integration.rs
src/: clientside.rs  color_scheme.rs  data_device.rs  lib.rs  main.rs  utils.rs  xdg_activation.rs  xstate.rs
src/clientside/: cursor_shape.rs  data_device.rs  mod.rs  shm.rs
src/server/: clientside.rs  decoration.rs  dispatch.rs  event.rs  mod.rs  selection.rs  tests.rs
src/xstate/: mod.rs  selection.rs  settings.rs  tests.rs
tests/: integration.rs
testwl/: Cargo.toml
testwl/src/: lib.rs
wl_drm/: Cargo.toml
wl_drm/src/: lib.rs
