[workspace]
members = ["macros", "testwl", "wl_drm"]

[workspace.dependencies]
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
wayland-scanner = "0.31.7"
wayland-server = "0.31.10"
rustix = "1.1.2"

[workspace.lints.clippy]
all = "deny"

[workspace.package]
rust-version = "1.85.0"
edition = "2024"

[package]
name = "xwayland-satellite"
version = "0.8.0"
authors = ["Shawn Wallace"]
license = "MPL-2.0"
description = "xwayland-satellite grants rootless Xwayland integration to any Wayland compositor implementing xdg_wm_base and viewporter. This is particularly useful for compositors that (understandably) do not want to go through implementing support for rootless Xwayland themselves."
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "2.5.0"
rustix = { workspace = true, features = ["event"] }
wayland-client.workspace = true
wayland-protocols = { workspace = true, features = ["client", "server", "staging", "unstable"] }
wayland-server.workspace = true
xcb = { version = "1.7.0", features = ["composite", "randr", "res"] }
wl_drm = { path = "wl_drm" }
log = "0.4.21"
pretty_env_logger = "0.5.0"
xcb-util-cursor = "0.4"
smithay-client-toolkit = { version = "0.20.0", default-features = false }

fontconfig = { version = "0.10", optional = true }
sd-notify = { version = "0.4.2", optional = true }
macros = { version = "0.1.0", path = "macros" }
hecs = { version = "0.10.5", features = ["macros"] }
num_enum = "0.7.4"
tiny-skia = "0.11.4"
ab_glyph = "0.2.32"
fontdue = "0.9.3"

[features]
default = []
systemd = ["dep:sd-notify"]
# load decoration font at runtime instead of embedding it into the executable
fontconfig = ["dep:fontconfig"]

[dev-dependencies]
rustix = { workspace = true, features = ["fs"] }
testwl = { path = "testwl" }

[build-dependencies]
anyhow = "1.0.98"
vergen-gitcl = "1.0.8"

[profile.ci]
inherits = "dev"
# Shrink bloat in ./target which negatively affects build caching
incremental = false
debug = false
