[package]
name = "xwayland-satellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "2.5.0"
paste = "1.0.14"
rustix = { version = "0.38.31", features = ["event"] }
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client", "server", "staging"] }
wayland-scanner = "0.31.1"
wayland-server = "0.31.1"
xcb = { version = "1.3.0", features = ["composite"] }
wl_drm = { path = "../wl_drm" }
libc = "0.2.153"
log = "0.4.21"
env_logger = "0.11.3"
pretty_env_logger = "0.5.0"
slotmap = "1.0.7"
xcb-util-cursor = "0.3.2"

[dev-dependencies]
rustix = { version = "0.38.31", features = ["fs"] }
testwl = { path = "../testwl" }
