[package]
name = "testwl"
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"

[dependencies]
wayland-protocols = { workspace = true, features = ["server", "staging", "unstable"] }
wayland-server.workspace = true
wl_drm = { path = "../wl_drm" }
rustix = { workspace = true, features = ["pipe"] }
