[package]
name = "testwl"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
wayland-protocols = { workspace = true, features = ["server", "staging", "unstable"] }
wayland-server.workspace = true
wl_drm = { path = "../wl_drm" }
rustix = { workspace = true, features = ["pipe"] }
rustversion = "1.0.22"
