[package]
name = "wl_drm"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client.workspace = true
wayland-scanner.workspace = true
wayland-server.workspace = true
